[gd_scene load_steps=2 format=3 uid="uid://c4hsvyapmg1c4"]

[ext_resource type="Script" path="res://scenes/UI.gd" id="1_xxxxx"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_xxxxx")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 42.0
text = "分数: 0"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "游戏结束！"

[node name="RestartButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
text = "重新开始"

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
